# PROCURVERSE.AI

./: .env.example  .gitignore  AVAILABLE_WORKFLOWS_AND_QUERIES.md  CODEBASE_AUDIT_REPORT.md  COMPLETED_AGENTIC_WORKFLOWS_REPORT.md  ENHANCED_AGENT_DATA_DISPLAY.md  FOUR_AGENTIC_WORKFLOWS_DETAILED.md  FRONTEND_TEST_INSTRUCTIONS.md  FULLSCREEN_TWO_PANEL_DEMO_PLAN.md  FULL_SYSTEM_ANALYSIS_REPORT.md  IMMEDIATE_FIXES_CHECKLIST.md  MAJOR_WORKFLOWS_VERIFICATION.md  MULTI_INTENT_DATA_EXTRACTION_FIX.md  P2P_ARCHITECTURE.md  P2P_INTELLIGENCE_GUIDE.md  PROCUREMENT_WORKFLOW_EXPLAINED.md  RISK_ASSESSMENT_ANALYSIS.md  SENIOR_ANSWERS.md  SLACK_SETUP.md  SYSTEM_STATUS.md  TESTED_DEMO_QUERIES.md  TEST_QUERIES_ALL.md  TEST_QUERIES_COMPLETE.md  _check_chains.py  _create_test_out.txt  add_sample_vendors.py  add_unique_constraint.py  check_approval_data.py  check_approval_emails.py  check_approval_queries.sql  check_duplicates.py  check_odoo_access.py  check_odoo_pos.py  check_odoo_simple.py  check_session_tables.py  check_system_status.py  check_workflow_schema.py  check_workflow_status.py  demo_full_cycle.py  fix_approval_emails.py  (+50 more)
.github/: copilot-instructions.md
_archive_pages/: POAmendmentsPage.tsx  QualityInspectionPage.tsx  ReturnsPage.tsx  VendorOnboardingPage.tsx
_archive_scripts/: add_unique_constraint.py  check_approval_emails.py  check_duplicates.py  check_system_status.py  fix_approval_emails.py  fix_existing_pr_steps.py  generate_assessment.py  verify_system_ready.py
backend/: check_approvers.py  check_budget_state.py  check_risk_data.py  main.py
frontend/: .env.example  (+3 more)
(+274 files in other folders)
